# online-shop

./: LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  dockerfile  pyproject.toml
nginx/: default.conf
src/: celery_app.py
src/apps/base/management/commands/: createadmin.py
src/apps/base/static/css/: base.css  pdf.css
src/apps/base/templates/: base.html
src/apps/cart/: cart.py  context_processors.py  decorators.py  forms.py  urls.py  views.py
src/apps/cart/templates/cart/: detail.html
src/apps/coupons/: admin.py  models.py  urls.py  views.py
src/apps/coupons/migrations/: 0001_initial.py
src/apps/orders/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
src/apps/orders/migrations/: 0001_initial.py  0002_order_payment_id_alter_order_id.py  0003_order_coupon_order_discount.py
src/apps/orders/templates/orders/: create.html  created.html
src/apps/orders/templates/orders/admin/: detail.html  pdf.html
src/apps/payment/: tasks.py  urls.py  views.py  webhooks.py
src/apps/payment/templates/payment/: canceled.html  process.html
src/apps/shop/: admin.py  mixins.py  models.py  reccomender.py  recommender.py  urls.py  views.py
src/apps/shop/migrations/: 0001_initial.py  0002_alter_product_managers.py  0003_alter_product_managers.py
src/apps/shop/templates/shop/product/: detail.html  list.html
src/config/: urls.py
src/config/settings/: __init__.py  base.py  cache.py  recommendation_system.py
