[tool.poetry]
name = "online-shop"
version = "0.1.0"
description = ""
authors = ["emurze <rozanov7475@yandex.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
psycopg2-binary = "^2.9.9"
pillow = "^10.0.1"
gunicorn = "^21.2.0"
easy-thumbnails = "^2.8.5"
redis = "^5.0.1"
celery = ">=5.2.7,<5.3.0"
celery-singleton = "0.3.1"
flower = "^2.0.1"
stripe = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
